# atombot

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: LEARNING_PLAN.md  nanobot-analysis.md
examples/: talk_to_openai.rs
src/: agent.rs  lib.rs  provider.rs  security.rs
src/agent/: api_client.rs  config.rs  message_window.rs  tools.rs
src/agent/tools/: allowed_dir.rs  exec.rs  filesystem.rs  web_fetch.rs  web_search.rs
src/agent/tools/filesystem/: edit_file.rs  list_dir.rs  read_file.rs  write_file.rs
src/bus/: events.rs  mod.rs  queue.rs
src/provider/: llm_provider.rs  message.rs  openai_provider.rs
src/security/: mod.rs  network.rs
src/utils/: logger.rs
tauri_ui/: README.md  dev.sh
tauri_ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri_ui/src-tauri/capabilities/: default.json
tauri_ui/src-tauri/src/: lib.rs
tauri_ui/ui/: index.html
web_ui/: Cargo.toml
web_ui/src/: main.rs
