[package]
name = "atombot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = { version = "0.34", features = ["full"] }
reqwest = { version = "0.12", features = ["default"] }
serde_json = "1"
tokio = { version = "1.50", features = ["full"] }
chrono = "0.4"
crossbeam-channel = "0.5"
async-trait = "0.1"
thiserror = "2.0.18"

# Web UI
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
mime = "0.3"
serde = { version = "1", features = ["derive"] }
