[package]
name = "atombot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = { version = "0.34", features = ["full"] }
reqwest = { version = "0.12", features = ["default", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50", features = ["full"] }
chrono = "0.4"
crossbeam-channel = "0.5"
async-trait = "0.1"
thiserror = "2.0.18"
dotenvy = "0.15"
regex = "1"
mime_guess = "2"
url = "2"
scraper = "0.20"
html-escape = "0.2"
urlencoding = "2"
