[package]
name = "web_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
atombot = { path = ".." }
axum = { version = "0.8", features = ["macros"] }
dotenvy = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
