[package]
name = "tauri-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
atombot = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "tauri_ui_lib"
crate-type = ["cdylib", "rlib"]
